# databricks-stock_app

./: .gitignore  FOLDERS_CONFIRMATION.md  FOLDER_STRUCTURE.md  GITHUB_SECRETS_SETUP.md  REORGANIZATION_SUMMARY.md  VERIFICATION_REPORT.md  VISUAL_FOLDER_GUIDE.md  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/: environments.env
.github/workflows/: deploy-databricks.yml  lint-and-test.yml  security-scan.yml
.streamlit/: config.toml
config/: .databrickscfg.example  .env.example
docs/: CI-CD-DEPLOYMENT.md  CI-CD-SETUP.md  DEPLOYMENT-ARCHITECTURE.md  GITHUB-ACTIONS-SETUP.md  QUICKSTART.md  SETUP-CHECKLIST.md  SETUP-COMPLETE.md  SSL-CERTIFICATE-RESOLUTION.md  SSL-CERTIFICATE-TROUBLESHOOTING.md  SSL-FIXES-SUMMARY.md  SSL-QUICK-FIX.md  SSL-VISUAL-GUIDE.md  YOUR-SSL-ERROR-SOLUTION.md  readme.md
scripts/: check-all.bat  check-all.sh  deploy_to_databricks.py  run_local.py  ssl_diagnostic.py  ssl_test_connection.py  verify_deployment.py
src/: __init__.py  app.py  app_env.py  config.py
tests/: __init__.py  conftest.py  test_app.py  test_connection.py  test_integration.py
